Phase 19: senior-review style pass across all modules
Convert six data carriers to Java 21 records: AuthContext, AuthScope.Scope,
OidcMetadata, Introspect.Built, OutputCollector.Entry, StateToken (with
defensive byte[] copies), and RpcMethodInfo. Replace the tri-state Boolean
isExchange with a StreamKind {PRODUCER, EXCHANGE, UNKNOWN} enum.

Seal AuthException into MissingCredentials + InvalidCredentials so HTTP
status mapping has somewhere to grow. Rename top-level Stream -> RpcStream
to stop shadowing java.util.stream.Stream in user code.

Centralise magic strings: HttpHeaders, MediaTypes, and Crypto (hmacSha256 +
constantTimeEquals) so SignedCookie and StateToken share one copy. Numbers
helper collapses four sites of Number->primitive widening. Replace manual
JSON building in HttpServer with ObjectMapper, and drop the 75-line
HttpServletRequest Proxy stub in OAuthPkce in favour of a new
JwtAuthenticator.validateBearer(String) entry point. JwtAuthenticator now
delegates OIDC discovery to OidcMetadata.discover instead of parsing
jwks_uri via regex.

Imports sweep (fully-qualified names -> proper imports) across RpcServer,
HttpStreamHandler, ConformanceService, and both worker Mains. Delete dead
code: empty RpcServer.deserializeParams, RpcConnection schema placeholder
methods, RpcMethodInfo.paramDefaults, JwtAuthenticator.headerFor, unused
test imports. Refactor conformance-worker/Main: ArgCursor + splitKv
helpers collapse seven copies of bounds-check boilerplate.

Peripherals: i64/f64 field helpers in StreamStates + BenchmarkServiceImpl,
StreamStates.echoBatch dedupes three copy loops, BenchmarkServiceImpl
roundtrip_types uses Collectors.joining. S3Storage / GcsStorage: URL
parse failures -> IllegalStateException, builder setters take full-name
params, close errors logged via SLF4J, GcsStorage now implements
AutoCloseable. US_ASCII charset pinned on token byte<->string conversions;
Locale.ROOT on toLowerCase. Shutdown-hook errors logged rather than
silently swallowe